--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,7 +5,15 @@ logout:
     path: /logout
 hwi_oauth_redirect:
     resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
-    prefix:   /demo/secured/connect
+    prefix:   /connect
 
-facebook_login:
-    path: /demo/secured/login_facebook
+hwi_oauth_connect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/connect.xml"
+    prefix:   /connect
+
+hwi_oauth_login:
+    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+    prefix:   /login
+
+facebook:
+    path: "/login/check-facebook"
