--- a/config/services.yaml
+++ b/config/services.yaml
@@ -37,3 +37,8 @@ services:
       tags:
           - { name: doctrine.event_listener, event: prePersist }
           - { name: doctrine.event_listener, event: preUpdate }
+
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
